--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
-<body tyle="background-image: url(/imagens/fernandodenoronha.webp)";>
+<body tyle="background-image: url(/imagens/fernandodenoronha.webp);">
 
     <h1>JOGO LIMPO</h1>
 
