--- a/queimadas.html
+++ b/queimadas.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
-<body style="background-image: url(/imagens/queimada2.webp)";>
+<body style="background-image: url(./imagens/queimada2.webp)";>
 
     <h1>QUEIMADAS</h1>
 
